@@ -318,6 +318,7 @@ All (GUI):
 - Generalized wxScrolledWindow into wxScrolled<T> template that can derive
   from any window class, not just wxPanel.
 - Allow having menu separators with ids != wxID_SEPARATOR (Jeff Tupper)
+- Fix appending items to sorted wxComboCtrl after creation (Jaakko Salli)
 
 wxGTK:
 
